--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,11 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    logo: '%kernel.project_dir%/public/logo/'
+    image: '%kernel.project_dir%/public/image/'
+    file: '%kernel.project_dir%/public/file/'
+    curriculum: '%kernel.project_dir%/public/curriculum/'
+    pub: '%kernel.project_dir%/public/pub/'
 
 services:
     # default configuration for services in *this* file
